# src/api/io/router/user_handler.go
@@ -26,6 +26,8 @@ type UserHandler struct {
 // @Produce     json
 // @Param		user body model.User false "new user"
 // @Success     200 {object} model.User
+// @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
 // @Failure		422 {object} object{error=string, message=string}
 // @Failure		500 {object} object{error=string, message=string}
 // @Router      /user [post]
@@ -74,6 +76,8 @@ func RegisterNewUser(c *gin.Context, env environment.Env) {
 // @Produce     json
 // @Param		user body model.User true "user to update"
 // @Success     200 {object} model.User
+// @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
 // @Failure		422 {object} object{error=string, message=string}
 // @Failure		500 {object} object{error=string, message=string}
 // @Router      /user [patch]
@@ -122,6 +126,8 @@ func UpdateUser(c *gin.Context, env environment.Env) {
 // @Produce     json
 // @Param		x-user-id header string true "user id"
 // @Success     200 {object} model.User
+// @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
 // @Failure		500 {object} object{error=string, message=string}
 // @Router      /user [get]
 func GetUser(c *gin.Context, env environment.Env) {
@@ -151,6 +157,7 @@ func GetUser(c *gin.Context, env environment.Env) {
 // @Param		id path string true "user id"
 // @Success     200 {object} model.UserContactInfo
 // @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
 // @Failure		500 {object} object{error=string, message=string}
 // @Router      /user/:id [get]
 func GetUserContactInfo(c *gin.Context, env environment.Env) {
@@ -191,6 +198,8 @@ func GetUserContactInfo(c *gin.Context, env environment.Env) {
 // @Produce     json
 // @Param		user body model.User true "user to update"
 // @Success     200 {object} object{ownedDogs=[]model.DogResponse, foundDogs=[]model.DogResponse}
+// @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
 // @Failure		500 {object} object{error=string, message=string}
 // @Router      /user/dog [get]
 func GetUserDogs(c *gin.Context, env environment.Env) {
@@ -222,6 +231,8 @@ func GetUserDogs(c *gin.Context, env environment.Env) {
 // @Produce     json
 // @Param		user body object{token=string} true "FCM token"
 // @Success     200 {object} object{result=string}
+// @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
 // @Failure		422 {object} object{error=string, message=string}
 // @Failure		500 {object} object{error=string, message=string}
 // @Router      /user/fcmtoken [put]
@@ -265,6 +276,19 @@ func UpdateFCMToken(c *gin.Context, env environment.Env) {
 	})
 }
 
+// SendNotif godoc
+// @Summary Register new user
+// @Schemes
+// @Description Register new user
+// @Tags        user
+// @Accept      json
+// @Produce     json
+// @Param		user body object{} false "message"
+// @Success     200 {object} model.User
+// @Failure		400 {object} object{error=string, message=string}
+// @Failure		401 {object} object{error=string, message=string}
+// @Failure		500 {object} object{error=string, message=string}
+// @Router      /user/notif [post]
 func SendNotif(c *gin.Context, env environment.Env) {
 	userID, _ := c.Get("x-user-id")
 
